--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -25,10 +25,10 @@
 #   unused-packages = true
 
 
-[[constraint]]
-  name = "github.com/go-sql-driver/mysql"
-  version = "1.3.0"
-
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  branch = "master"
+  name = "golang.org/x/crypto"
