--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ server/go_server/vendor/*
 server/go_server/go_server
 server/go_server/log/*
 server/js_server/node_modules/*
+server/gateway/vendor/*
